# Truncate

./: .dockerignore  .gitignore  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.citadel  Dockerfile.client  LICENSE  QA_CHECKLIST.md  README.md  fly.citadel.toml  fly.client.toml  fly.toml
client/: Cargo.toml
client/src/: active_game.rs  comms.rs  debug.rs  game.rs  main.rs
client/src/lil_bits/: board.rs  character.rs  editor.rs  editor_square.rs  hand.rs  mod.rs  square.rs  tile.rs  timer.rs
client/src/theming/: mod.rs
core/: Cargo.toml  wordnik_wordlist.txt
core/src/: _main.rs  bag.rs  board.rs  error.rs  game.rs  hand.rs  judge.rs  lib.rs  main.rs  messages.rs  moves.rs  player.rs  reporting.rs
server/: Cargo.toml
server/src/: definitions.rs  game_state.rs  main.rs  room_codes.rs
src/: bag.rs  (+8 more)
truncate_client/: Cargo.toml  Cross.toml  README.md  final_wordlist.txt
truncate_client/img/: LICENSE  README.md  package.json  process_truncate_texture.mjs  tile_order  truncate.aseprite
truncate_client/music/: Game Theme.wav.asd  Menu Theme.wav.asd  README.md
truncate_client/music/Game Theme Project/: Game Theme.als  Menu Theme.als
truncate_client/music/Game Theme Project/Ableton Project Info/: Project8_1.cfg
truncate_client/music/Game Theme Project/Backup/: Game Theme [2023-07-27 154730].als  Game Theme [2023-07-27 214347].als  Game Theme [2023-07-27 215237].als  (+3 more)
truncate_client/src/: active_game.rs  app_inner.rs  app_outer.rs  comms.rs  editor_state.rs  game.rs  game_client.rs  glyph_meaure.rs  handle_launch_code.rs  handle_messages.rs  lib.rs  main.rs  native_comms.rs  web_comms.rs
truncate_client/src/lil_bits/: battle.rs  board.rs  board_editor.rs  board_editor_square.rs  changes_splash.rs  character.rs  dictionary.rs  editor.rs  editor_square.rs  hand.rs  hand_square.rs  mod.rs  splash.rs  square.rs  tex.rs  tile.rs  timer.rs
truncate_client/src/regions/: active_game.rs  arcade_pvp.rs  generator.rs  lobby.rs  mod.rs  native_menu.rs  replayer.rs  rules.rs  single_player.rs  tutorial.rs
truncate_client/src/theming/: mapper.rs  mod.rs  tex.rs
truncate_client/src/utils/: daily.rs  depot.rs  game_evals.rs  glyph_meaure.rs  glyph_utils.rs  includes.rs  macros.rs  mapper.rs  mod.rs  tex.rs  text.rs  theming.rs  timing.rs  urls.rs
truncate_client/tutorials/: example_game.yml  rule_card.yml  rules.yml  rules_0.yml  rules_1.yml  rules_2.yml  test_board.txt  tutorial.yml  tutorial_01.yml  tutorial_02.yml  tutorial_03.yml  update_01.yml  update_02.yml  update_03.yml
truncate_core/: Cargo.toml  README.md
truncate_core/benches/: board_evals.rs  core_bench.rs
truncate_core/src/: bag.rs  board.rs  emojification.rs  error.rs  game.rs  generation.rs  judge.rs  lib.rs  messages.rs  moves.rs  npc.rs  player.rs  reporting.rs  rules.rs
truncate_core/src/moves/: mod.rs  packing.rs
truncate_core/src/npc/: .mod.rs.pending-snap  mod.rs  scoring.rs
truncate_core/src/snapshots/: truncate_core__generation__tests__reroll_test.snap
truncate_dueller/: Cargo.toml  Cross.toml  README.md  seed_notes.yml
truncate_dueller/src/: dicts.rs  main.rs  storage.rs
truncate_server/: Cargo.toml  README.md  start.sh
truncate_server/.sqlx/: query-01745be4919fb26eab6e7ae6b64bd9bc7ccf9c8f7bcd2b683f90af13c90f4287.json  query-24a31405ec49c2140b62cda892f8f05c52227b3885b32281ae60f33ffd35fe97.json  query-2595f0f763251d53feca9237fd06da06b118775d3d31d89e01532cb1f7cb6473.json  query-2abb46d6900321f2df17c4b9a7cf1bc5c73d8376a9f9133315c840450e09035a.json  query-3ab12d8a007011648a01f4bc026762db5c6c2b50b5cbeb125fce386dc77c5a48.json  query-4189035a9a1f52b2ca2cd9aa4474c3c71e54383486941183ef38ef3efd5505c2.json  query-45f9f19f3f7dc001d7b1072dd51ba3f7c359f5c0a7df6b8733be6294756cdecb.json  query-45fc3f90bf433b0394c4365e766add3e0d48bffee101db6804cacff35c2945e7.json  query-4ce0ef8fb146c459228621abdbfd7477ff6c6801e123b04e1cf0bbacec6f2805.json  query-4ea157904871725c9ff12bdfcd794186495b95cb4733bdd23dced657a6cf44e5.json  query-616a5ca60db29757b0df0fd7f3686ba5f3fa533867a5c6073b7c7e8020af7b89.json  query-6183203a2233ec0255570ead4d0d11ff86b31104969d0655d683fdeb3994d12c.json  query-647574d6e04abc2a50eb97a405497f8009a7a59dd76c7caae32e6002d878a805.json  query-661dba878064202940b5aedbda000bd7e1d6f70589c769d1b31ced7f8064f185.json  query-6abf6faa7db12822e8f5f5b3387133546e84d57fe001a3d207cdb27fd05a6bf1.json  query-6aef88303eb751be1cfae80a5648fa17cd50dd8ea7e59f9692955be324d5c84f.json  query-75f91137d045404d1c192cab58d428bd96ed75116422f5c7facd659139606e64.json  query-9789a79dbdb8953fde3cdc30053e9eb7bcbf603b4ac4cc50628498725a36d3a8.json  query-9d090b46d572eadeaa9e39a5caecec3f720b6aa7ebfee3d434a51fa159d7fc2f.json  query-9e7fbc667dca45092e2d654b357dea43f8ca548c168c6f893c503e76be7ea116.json  query-d90f76d17fa28e9fc07f76825af45de9d500e317dbd5bade555a1034315dcc71.json  query-db33729eb8ecd2bd06c6c2b691ba844943a6af095de44f3fb8b08b6c4b6cbbe3.json  query-dbdf9c39e4150556e80b6464d78c71804f30a373830f076aa3e1eb5b51d1f555.json  query-e4d0b7e14cf491f363bfe389477381a55ba82cbdc65133f877e44008c5c5e509.json  query-f3580a08c64b4f321abeef7f9f055519743dd5ad3ae5d8a3f77df60c373bc80a.json  query-fc04b14002810733b1ba1be23fd341d6afbaf43fefec721c6830e7306dfa8291.json
truncate_server/migrations/: 20240124004147_create_initial_tables.down.sql  20240124004147_create_initial_tables.up.sql  20240324033242_player_analytics.down.sql  20240324033242_player_analytics.up.sql  20240324043347_events.down.sql  20240324043347_events.up.sql  20240406084836_changelogs.down.sql  20240406084836_changelogs.up.sql  20240406085625_update_01.down.sql  20240406085625_update_01.up.sql  20240922221909_new_changelogs_system.down.sql  20240922221909_new_changelogs_system.up.sql  20240923032152_update_02.down.sql  20240923032152_update_02.up.sql  20250601223036_update_03.down.sql  20250601223036_update_03.up.sql
truncate_server/src/: accounts.rs  definitions.rs  errors.rs  event_stream.rs  game_state.rs  main.rs  room_codes.rs
truncate_server/src/storage/: accounts.rs  daily.rs  events.rs  mod.rs
truncate_server/src/word_definitions/: b.json
(+71 files in other folders)
