[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
strum = "0.24"
strum_macros = "0.24"
clearscreen = "1.0.10"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
