[package]
name = "truncate_client"
version = "0.1.0"
edition = "2021"


# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.26.2"
epaint = { version = "0.26.2", features = ["color-hex"] }
color-hex = "0.2.0"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
truncate_core = { path = "../truncate_core" }
hashbrown = "0.13"
time = { version = "0.3", features = ["serde", "macros", "formatting"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
chrono = "0.4"
futures = "0.3"
image = { version = "0.24", features = ["png"] }
ab_glyph = "0.2"
interpolation = "0.3.0"
tracing = "0.1.40"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.18", default-features = false }
gilrs = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["HtmlAudioElement", "Navigator"] }
js-sys = "0.3"
ws_stream_wasm = "0.7"
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.2.6", features = ["futures"] }
