[package]
name = "truncate_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oorandom = "11"
strum = "0.24"
strum_macros = "0.24"
clearscreen = "1.0.10"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["serde"] }
