[package]
name = "truncate_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oorandom = "11"
strum = "0.24"
strum_macros = "0.24"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["serde"] }
instant = "0.1"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
chksum-hash-sha2 = { version = "0.0.0", default-features = false, features = [
    "256",
] }
noise = "0.8"
tracing = "0.1.41"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml"] }
criterion = { version = "0.3", features = ["html_reports"] }

[profile.dev]
opt-level = 3

[[bench]]
name = "core_bench"
harness = false
