[package]
name = "truncate_dueller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8"
truncate_core = { path = "../truncate_core" }
instant = "0.1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
