[package]
name = "truncate_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.18"
tungstenite = { version = "0.18", default-features = false }
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
dashmap = "5.0"
serde_json = "1"
rand = "0.8.5"
truncate_core = { path = "../truncate_core" }
reqwest = { version = "0.11", features = ["json"] }
