[package]
name = "truncate_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.18"
tungstenite = { version = "0.18", default-features = false }
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rusqlite = "0.29"
rand = "0.8.5"
truncate_core = { path = "../truncate_core" }
reqwest = { version = "0.11", features = ["json"] }
jwt-simple = "0.10"
hex = "0.4"
instant = "0.1"
dotenvy = "0.15.7"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = [
    "postgres",
    "migrate",
    "uuid",
    "json",
    "runtime-tokio",
    "tls-rustls",
] }
woothee = "0.13.0"

[profile.dev.package.sqlx-macros]
opt-level = 3
